# parter-event-scraper

./: .gitignore  README.md  package-lock.json  package.json  partners.yaml  pyproject.toml  wrangler.jsonc
src/partner_event_scraper/: __init__.py  cli.py  models.py  monday.py  parsers.py
tests/: test_monday.py  test_parsers.py
worker/: index.js
