[project]
name = "partner-event-scraper"
version = "0.1.0"
description = "Collect normalized event and announcement data from partner organization websites."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "dateparser>=1.2",
  "PyYAML>=6.0",
  "requests>=2.31",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
partner-events = "partner_event_scraper.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
